# mobile-script-v2

./: README.md  start-all.sh  stop-all.sh
imspw-script/: .env.example  .gitignore  .gitmodules  PROJECT_OVERVIEW.md  README.md  pyproject.toml
imspw-script/module-core/: README.md  pyproject.toml  requirements.txt
imspw-script/module-core/src/: aid_utils.py  config.py  worker_registry.py
imspw-script/module-core/src/clients/: message_fetcher.py  processor_client.py
imspw-script/module-core/src/db/: database.py  models.py
imspw-script/module-core/src/frida_core/: device_supervisor.py  device_worker.py
imspw-script/module-core/src/hooks/: README.md  agent.js  agent_bundled.js  package.json
imspw-script/module-core/src/infrastructure/: lock.py  queue.py
imspw-script/module-core/src/processor/: device_processor.py
imspw-script/module-core/src/scripts/: reset_db.py  seed_agents.py  seed_services.py  test_line_send_message.py
imspw-script/module-core/src/services/: im_service.py  line_service.py  messenger_service.py  telegram_service.py  whatsapp_service.py
imspw-script/module-core/tests/: test_wa_batch_send.py  test_wa_create_group.py
imspw-script/scripts/: frida-watchdog.sh  line_diagnose.py  line_find_username.py  line_fts_test.py  line_inspect_fts.py  line_live_monitor.py  messenger_diagnose.py  messenger_monitor_guide.md  messenger_realtime_analyze.py  run_callback_server.py  start-emulator.sh  telegram_login.py  test_create_group.py  test_send_group_messages.py  test_whatsapp_invite_link.py  truncate_task_queue.py
imspw-script/src/: main.py
(+16 files in other folders)
