[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aid-core"
version = "0.1.0"
description = "Shared core module for AID Group Control ecosystem"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy",
    "python-dotenv",
    "pydantic",
    "asyncpg",
    "psycopg2-binary",
    "telethon>=1.42.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aid_core"]
